--- a/index.html
+++ b/index.html
@@ -5,9 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic-Tac-Toe</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="game-container">
+        <h1>Tic-Tac-Toe v2</h1>
+        <div class="controls">
+            <button id="theme-toggle">Toggle Theme</button>
+            <select id="difficulty">
+                <option value="easy">Easy</option>
+                <option value="medium">Medium</option>
+                <option value="hard">Hard</option>
+            </select>
+        </div>
         <div class="board" id="board">
             <div class="cell" data-index="0"></div>
             <div class="cell" data-index="1"></div>
@@ -20,9 +30,12 @@
             <div class="cell" data-index="8"></div>
         </div>
         <div id="status">Player X's turn</div>
-        <button id="reset">Reset Game</button>
+        <div class="score">
+            <span>Player X: <span id="score-x">0</span></span>
+            <span>Player O: <span id="score-o">0</span></span>
+        </div>
+        <button id="reset">New Game</button>
     </div>
-
     <script src="script.js"></script>
 </body>
 </html>
