--- a/index.html
+++ b/index.html
@@ -9,30 +9,26 @@
 </head>
 <body>
     <div class="game-container">
-        <h1>Tic-Tac-Toe v3</h1>
+        <h1>Tic-Tac-Toe</h1>
         <div class="controls">
             <button id="theme-toggle">Toggle Theme</button>
             <select id="game-mode">
                 <option value="pvp">Player vs Player</option>
                 <option value="pvc">Player vs Computer</option>
+                <option value="cvc">Computer vs Computer</option>
             </select>
             <select id="difficulty" style="display: none;">
                 <option value="easy">Easy</option>
                 <option value="medium">Medium</option>
                 <option value="hard">Hard</option>
             </select>
+            <select id="board-size">
+                <option value="3">3x3</option>
+                <option value="4">4x4</option>
+                <option value="5">5x5</option>
+            </select>
         </div>
-        <div class="board" id="board">
-            <div class="cell" data-index="0"></div>
-            <div class="cell" data-index="1"></div>
-            <div class="cell" data-index="2"></div>
-            <div class="cell" data-index="3"></div>
-            <div class="cell" data-index="4"></div>
-            <div class="cell" data-index="5"></div>
-            <div class="cell" data-index="6"></div>
-            <div class="cell" data-index="7"></div>
-            <div class="cell" data-index="8"></div>
-        </div>
+        <div class="board" id="board"></div>
         <div id="status">Player X's turn</div>
         <div class="score">
             <span>Player X: <span id="score-x">0</span></span>
@@ -40,6 +36,7 @@
         </div>
         <button id="reset">New Game</button>
         <div id="timer">Time: 00:00</div>
+        <div id="move-history"></div>
     </div>
     <div id="win-animation" class="confetti"></div>
     <script src="script.js"></script>
